; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ncpfs/extr_sock.c_info_server.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ncpfs/extr_sock.c_info_server.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ncp_server = type { i64 }
%struct.kvec = type { i32, i32* }

@MSG_NOSIGNAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ncp_server*, i32, i8*, i64)* @info_server to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @info_server(%struct.ncp_server* %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.ncp_server*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca [2 x %struct.kvec], align 16
  %10 = alloca [2 x i32], align 4
  store %struct.ncp_server* %0, %struct.ncp_server** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %11 = load %struct.ncp_server*, %struct.ncp_server** %5, align 8
  %12 = getelementptr inbounds %struct.ncp_server, %struct.ncp_server* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %45

15:                                               ; preds = %4
  %16 = load i64, i64* %8, align 8
  %17 = add i64 %16, 8
  %18 = trunc i64 %17 to i32
  %19 = call i32 @cpu_to_be32(i32 %18)
  %20 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 0
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @cpu_to_be32(i32 %21)
  %23 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 1
  store i32 %22, i32* %23, align 4
  %24 = getelementptr inbounds [2 x i32], [2 x i32]* %10, i64 0, i64 0
  %25 = getelementptr inbounds [2 x %struct.kvec], [2 x %struct.kvec]* %9, i64 0, i64 0
  %26 = getelementptr inbounds %struct.kvec, %struct.kvec* %25, i32 0, i32 1
  store i32* %24, i32** %26, align 8
  %27 = getelementptr inbounds [2 x %struct.kvec], [2 x %struct.kvec]* %9, i64 0, i64 0
  %28 = getelementptr inbounds %struct.kvec, %struct.kvec* %27, i32 0, i32 0
  store i32 8, i32* %28, align 16
  %29 = load i8*, i8** %7, align 8
  %30 = bitcast i8* %29 to i32*
  %31 = getelementptr inbounds [2 x %struct.kvec], [2 x %struct.kvec]* %9, i64 0, i64 1
  %32 = getelementptr inbounds %struct.kvec, %struct.kvec* %31, i32 0, i32 1
  store i32* %30, i32** %32, align 8
  %33 = load i64, i64* %8, align 8
  %34 = trunc i64 %33 to i32
  %35 = getelementptr inbounds [2 x %struct.kvec], [2 x %struct.kvec]* %9, i64 0, i64 1
  %36 = getelementptr inbounds %struct.kvec, %struct.kvec* %35, i32 0, i32 0
  store i32 %34, i32* %36, align 16
  %37 = load %struct.ncp_server*, %struct.ncp_server** %5, align 8
  %38 = getelementptr inbounds %struct.ncp_server, %struct.ncp_server* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = getelementptr inbounds [2 x %struct.kvec], [2 x %struct.kvec]* %9, i64 0, i64 0
  %41 = load i64, i64* %8, align 8
  %42 = add i64 %41, 8
  %43 = load i32, i32* @MSG_NOSIGNAL, align 4
  %44 = call i32 @do_send(i64 %39, %struct.kvec* %40, i32 2, i64 %42, i32 %43)
  br label %45

45:                                               ; preds = %15, %4
  ret void
}

declare dso_local i32 @cpu_to_be32(i32) #1

declare dso_local i32 @do_send(i64, %struct.kvec*, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
